--- a/CVcss.css
+++ b/CVcss.css
@@ -1,83 +1,81 @@
+/* CSS for CV webpages*/
+
+/*------------------Header--------------------*/
+/*Header image*/
 header img{
   width: 195px;
   height: 260px;
   float: left;
-  margin: 20px
-}
+  margin: 20px}
 
+/*Header bar text*/
 h1 {
   text-align: right;
   color: white;
   margin-right: 5%;
-  font-size: 60px;
-}
+  font-size: 60px;}
 
-
+/*Header Bar*/
 header{
   width: 100%;
   height: 300px;
-  background-color: #000040;
+  background-color: #000040;}
+/* */
 
-}
 
-body{
-  background-color: white ;
-
-}
-
-a {
-  background-color: #000040;
-  width: 100px;
-}
-
-.navbar
-{
+/*--------------------Nav Bar-------------------*/
+.navbar {
   color: white;
   text-align: center;
   padding: 10px 50px;
   margin: 20px;
   text-decoration: none;
-  background-color: #000040;
-}
+  background-color: #000040;}
 
+/*navbar items*/
+a {
+  background-color: #000040;
+  width: 100px;}
+
+/*navbar list*/
 ul
-{
-  list-style-type:none;
+{ list-style-type:none;
   overflow: hidden;
   width: auto;
   background-color: #000040;
   float: right;
-  padding-left: 0px;
-}
+  padding-left: 0px;}
 
+/*navbar list items (the actual buttons)*/
 li
-{
-   float: left;
-}
+{float: left;}
 
 li a
-{
-  display: block;
+{ display: block;
   color: white;
   text-align: center;
   padding: 20px 50px;
   text-decoration: none;
   width: auto;
-  height: auto;
-}
+  height: auto;}
 
-li a:hover {
-       background-color: #9999b2;
-}
+/*different background when hovering over a nav bar menu item*/
+li a:hover { background-color: #9999b2;}
 
+/* adds underlines to the title current page you are on in the navbar */
 #active{text-decoration: underline;
   text-decoration-style: double;}
 
-.dropdown {
-   float: left;
-    overflow: hidden;
-}
 
+
+/*--------------------dropdown menu mechanics-------------*/
+/*Adapted from code on the vW3Schools website page on dropdown menus*/
+
+/*dropdown menu*/
+.dropdown { float: left;
+     overflow: hidden;}
+
+/* dropdown button on navbar menu*/
 .dropdown .dropbtn {
   font-size: 20px;
   border: none;
@@ -86,20 +84,22 @@ li a:hover {
   padding: 0;
   background-color: inherit;
   font-family: inherit; /* Important for vertical align on mobile phones */
-  margin: 0; /* Important for vertical align on mobile phones */
-}
-.navbar a:hover, .dropdown:hover .dropbtn {
+  margin: 0; /* Important for vertical align on mobile phones */}
+
+  .navbar a:hover, .dropdown:hover .dropbtn {
   background-color: #9999b2;
-  color: black;
-}
+  color: black;}
+
+/*actual dropdown menu*/
 .dropdown-content {
   display: none;
   position: absolute;
   background-color: #f9f9f9;
   width: 100px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-}
+  z-index: 1;}
+
+  /*actual dropdown menu items*/
 .dropdown-content a {
   float: none;
   color: white;
@@ -107,41 +107,40 @@ li a:hover {
   text-decoration: none;
   display: block;
   text-align: center;
-  width: 100px;
-}
+  width: 100px;}
+
+  /*switches background col;our upon hover of dropdown menu items*/
 .dropdown-content a:hover {
-  background-color: #ddd;
-}
+  background-color: #ddd;}
+
+/*displays the menu selection*/
 .dropdown:hover .dropdown-content {
   margin-top: 50px;
   display: block;
   width: 200px;
-  background-color: grey;
-}
+  background-color: grey;}
 
 
 
 
 
-/*responsive hamburger menu*/
-.icon {
-  display: none;
-}
+/*--------------------------responsive hamburger menu--------------------*/
+/* initially hides the hamburger icon*/
+.icon {display: none;}
 
-
+/* creates the condition that when the max screen width is 720px, the following will happen*/
 @media screen and (max-width: 720px) {
-.navbar li {
-  display: none;
-}
 
-header img {
-  display: none;
-}
+  /*hides the nav bar*/
+.navbar li { display: none;}
 
-h1{
-  font-size: 30px
-}
+/* hides the header image*/
+header img { display: none;}
 
+/*decreases the headder text size*/
+h1{ font-size: 30px}
+
+/*shows and formats the hamburger icon*/
 .hamburger .icon {
     position: relative;
     display: block;
@@ -153,41 +152,57 @@ h1{
     margin-left: 50px;
     margin-right: 50px;
     text-decoration: none;
-    font-size: 60px;
-  }
+    font-size: 60px;}
 }
 
+
+
+
+/* creates the condition that when the max screen width is 720px, the following will happen*/
 @media screen and (max-width: 720px) {
+/* initialises the hamburger icon's dropdown menu*/
   .navbar.responsive {position: relative;}
   .navbar.responsive .icon {
     position: absolute;
     right: 0;
-    top: 0;
-  }
+    top: 0;}
+
+    /*formats the hamburger dropdown menu*/
   .dropdown:hover .dropdown-content {
     margin-top: 0px;
-    width: auto;
-  }
+    width: auto;}
+
+    /*formats dropdown menu options*/
   .navbar.responsive li {
     float: none;
     display: block;
     text-align: left;
     margin-left: 20px;
-    margin-right: 20px;
-  }
+    margin-right: 20px;}
+
+    /*changes header to match to webpages*/
   header{
     width: auto;
     height: 25%;
-    background-color: #000040;
-}
+    background-color: #000040;}
 }
 
+
+
+
+
+
+
+/*formats Home page image*/
 #s1 img{
   width: 585px;
-  height: 780px;
-}
+  height: 780px;}
 
+/*body background colour*/
+body{
+  background-color: white ;}
 
+/*formats contact list*/
 #contacts1{
   background-color: #eeeeee;
   width: auto;
@@ -197,34 +212,31 @@ h1{
   margin-top: 50px;
   margin-bottom: 50px;
   text-align: center;
-  overflow: hidden;
-}
+  overflow: hidden;}
 
+/*formats contact list options*/
 #contacts1 ul
-{
-  list-style-type: decimal;
+{ list-style-type: decimal;
   display: block;
   width: 100%;
   background-color: #000040;
-  float: none;
-}
+  float: none;}
+
+
 #contacts1 li
-{
-   float:  none;
-}
+{ float:  none;}
+
 
 #contacts1 li a
-{
-  display: block;
+{  display: block;
   color: white;
   text-align: center;
   padding: 20px 50px;
-  text-decoration: none;
-}
+  text-decoration: none;}
 
 
 
-
+/* formats main content area for majority of pages*/
 #s1{
   background-color: #eeeeee;
   width: auto;
@@ -233,79 +245,58 @@ h1{
   padding: 50px;
   margin-top: 50px;
   margin-bottom: 50px;
-  text-align: center;
-}
-
+  text-align: center;}
 
  {
     text-align: center;
     font-size: 30px;
     font-weight: bold;
     list-style: none;
-    background-color: inherit;
-  }
+    background-color: inherit;}
 
+/*formats the footers and main content area*/
 .ContentBox{
-  padding: 0 20px 0 20px;
-}
+  padding: 0 20px 0 20px;}
 
-
-.Biotable b
-{
-  color: white;
+/*formats the buttons on the bio Home page*/
+.Biotable b{
+   color: white;
   text-align: center;
   padding: 10px 50px;
   margin: 20px;
   text-decoration: none;
-  background-color: #000040;
-}
+  background-color: #000040;}
 
-.Biotable b:hover {
-       background-color: #9999b2;
-}
+.Biotable b:hover { background-color: #9999b2;}
 
-b
-{
+/* formats Bio Home buttons*/
+b{
   color: white;
   float: none;
   text-align: center;
   padding: 10px 50px;
   height: auto;
   text-decoration: none;
-  background-color: #000040;
-}
+  background-color: #000040;}
 
-b:hover {
-       background-color: #9999b2;
-}
+b:hover { background-color: #9999b2;}
 
-
-td
-{
-  height: 100px;
-}
+/* formats table entries to appropriate space cells*/
+td { height: 100px;}
 
 
-
-
-
-
-
-
+/*formats footer areas */
 #footer1{
   width: 30%;
   background-color: #cccccc;
-  float: left;
-}
+  float: left;}
 
 #footer2{
   width: 40%;
   background-color: #bbbbbb;
-  float: left;
-}
+  float: left;}
 
 #footer3{
   width: 30%;
   background-color: #aaaaaa;
-  float: right;
-}
+  float: right;}
