--- a/CVcss.css
+++ b/CVcss.css
@@ -1,5 +1,8 @@
 /* CSS for CV webpages*/
 
+
+font-family: 'Oswald', sans-serif;
+
 /*------------------Header--------------------*/
 /*Header image*/
 header img{
